--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "hardwareStore",
-  "displayName": "hardwareStore"
+    "name": "hardwareStore",
+    "displayName": "Hardware Store"
 }
