--- a/package.json
+++ b/package.json
@@ -1,29 +1,45 @@
 {
-  "name": "hardwarestore",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.66.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
-  },
-  "jest": {
-    "preset": "react-native"
-  }
+    "name": "hardwarestore",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "android": "react-native run-android",
+        "ios": "react-native run-ios",
+        "start": "react-native start",
+        "test": "jest",
+        "lint": "eslint ."
+    },
+    "dependencies": {
+        "@react-native-async-storage/async-storage": "^1.15.14",
+        "@react-native-masked-view/masked-view": "^0.2.6",
+        "@react-navigation/bottom-tabs": "^6.0.9",
+        "@react-navigation/native": "^6.0.6",
+        "@react-navigation/stack": "^6.0.11",
+        "expo": "^43.0.4",
+        "expo-blur": "~10.0.3",
+        "react": "17.0.2",
+        "react-native": "0.66.4",
+        "react-native-bootsplash": "^4.0.2",
+        "react-native-gesture-handler": "^2.1.0",
+        "react-native-linear-gradient": "^2.5.6",
+        "react-native-safe-area-context": "^3.3.2",
+        "react-native-screens": "^3.10.1",
+        "react-redux": "^7.2.6",
+        "redux": "^4.1.2",
+        "redux-persist": "^6.0.0",
+        "redux-saga": "^1.1.3"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9",
+        "@babel/runtime": "^7.12.5",
+        "@react-native-community/eslint-config": "^2.0.0",
+        "babel-jest": "^26.6.3",
+        "eslint": "7.14.0",
+        "jest": "^26.6.3",
+        "metro-react-native-babel-preset": "^0.66.2",
+        "react-test-renderer": "17.0.2"
+    },
+    "jest": {
+        "preset": "react-native"
+    }
 }
