--- a/ios/hardwareStore/Info.plist
+++ b/ios/hardwareStore/Info.plist
@@ -50,7 +50,7 @@
 		<string>SF-Pro-Rounded-Ultralight.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>BootSplash</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
