--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-native-linear-gradient": "^2.5.6",
         "react-native-safe-area-context": "^3.3.2",
         "react-native-screens": "^3.10.1",
+        "react-navigation": "^4.4.4",
         "react-redux": "^7.2.6",
         "redux": "^4.1.2",
         "redux-persist": "^6.0.0",
